--- a/tasks/http_nginx.yml
+++ b/tasks/http_nginx.yml
@@ -1,26 +1,59 @@
 ---
-- name: "[NGINX] -  Required and recommended packages are installed."
-  package: "name={{ item }} state=present"
-  with_items:
-    - nginx
-    - smbclient
-    - "php{{ php_ver }}-fpm"
-    - "php{{ php_ver }}-gd"
-    - "php{{ php_ver }}-ldap"
-    - "php{{ php_ver }}-imap"
-    - "php{{ php_ver }}-json"
-    - "php{{ php_ver }}-curl"
-    - "php{{ php_ver }}-intl"
-    - "php{{ php_ver }}-mcrypt"
-  notify: [ "start nginx", "start php-fpm" ]
+- block:
+  # For Installations on CentOS or other non Debian/Ubuntu
+  - name: "[NGINX] -  Required and recommended packages are installed."
+    package: "name={{ item }} state=present"
+    with_items:
+      - nginx
+      - smbclient
+      - "php{{ php_ver }}-fpm"
+      - "php{{ php_ver }}-gd"
+      - "php{{ php_ver }}-ldap"
+      - "php{{ php_ver }}-imap"
+      - "php{{ php_ver }}-json"
+      - "php{{ php_ver }}-curl"
+      - "php{{ php_ver }}-intl"
+      - "php{{ php_ver }}-mcrypt"
+    notify: [ "start nginx", "start php-fpm" ]
 
-- name: "[NGINX] -  Some other packages are installed."
-  package: "name={{ item }} state=present"
-  with_items: "{{ php_pkg_spe }}"
+  - name: "[NGINX] -  Some other pakages are installed."
+    package: "name={{ item }} state=present"
+    with_items: "{{ php_pkg_spe }}"
 
-- name: "[NGINX] -  APCu is installed."
-  package: "name={{ php_pkg_apcu }} state=present"
-  when : ansible_distribution_release not in [ "trusty" ]
+  - name: "[NGINX] -  APCu is installed."
+    package: "name={{ php_pkg_apcu }} state=present"
+    when : ansible_distribution_release not in [ "trusty" ]
+
+  # end of Block
+  when: ansible_distribution not in [ "Debian", "Ubuntu" ]
+
+- block:
+  # For Installations on Debian/Ubuntu
+  - name: "[NGINX] -  Required and recommended packages are installed."
+    apt: "name={{ item }} state=latest default_release={{ nextcloud_php_distribution }}"
+    with_items:
+      - nginx
+      - smbclient
+      - "php{{ php_ver }}-fpm"
+      - "php{{ php_ver }}-gd"
+      - "php{{ php_ver }}-ldap"
+      - "php{{ php_ver }}-imap"
+      - "php{{ php_ver }}-json"
+      - "php{{ php_ver }}-curl"
+      - "php{{ php_ver }}-intl"
+      - "php{{ php_ver }}-mcrypt"
+    notify: [ "start nginx", "start php-fpm" ]
+
+  - name: "[NGINX] -  Some other pakages are installed."
+    apt: "name={{ item }} state=latest default_release={{ nextcloud_php_distribution }}"
+    with_items: "{{ php_pkg_spe }}"
+
+  - name: "[NGINX] -  APCu is installed."
+    apt: "name={{ php_pkg_apcu }} state=latest default_release={{ nextcloud_php_distribution }}"
+    when : ansible_distribution_release not in [ "trusty" ]
+
+  # end of Block
+  when: ansible_distribution in [ "Debian", "Ubuntu" ]
 
 - block:
   # load APCu from backports as the default version for trusty is obsolete.
@@ -84,7 +117,7 @@
 - name: "[NGINX] -  generate Nextcloud configuration for nginx"
   template:
     dest: /etc/nginx/sites-available/nc_{{ nextcloud_instance_name }}.cnf
-    src: "{{nextcloud_websrv_template}}"
+    src: "{{ nextcloud_websrv_template }}"
   notify: reload nginx
 
 - name: "[NGINX] -  Enable Nextcloud in nginx conf"
